gap-insurance - show fix

--- a/src/pages/GAP Insurance/styles.scss
+++ b/src/pages/GAP Insurance/styles.scss
@@ -165,7 +165,7 @@
       display: block;
       position: absolute;
       left: 0;
-      box-shadow: 1px 1px 15px 0 $pale-grey;
+      box-shadow: 1px 1px 15px rgba(49, 123, 218, .2);
       .content {
         padding: 25px 25px 26px 25px;
         .title {
